assignment3/target/main/bkit/parser/BKITParser.py
# Generated from main/bkit/parser/BKIT.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BKITParser ( Parser ):

    grammarFileName = "BKIT.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'Body'", "'Break'", "'Continue'", "'Do'", "'Else'", 
                     "'ElseIf'", "'EndBody'", "'EndIf'", "'EndFor'", "'EndWhile'", 
                     "'For'", "'Function'", "'If'", "'Parameter'", "'Return'", 
                     "'Then'", "'Var'", "'While'", "'True'", "'False'", 
                     "'EndDo'", "'+'", "'+.'", "'-'", "'-.'", "'*'", "'*.'", 
                     "'\\'", "'\\.'", "'%'", "'!'", "'&&'", "'||'", "'=='", 
                     "'='", "'!='", "'>'", "'<'", "'>='", "'<='", "'=/='", 
                     "'<.'", "'>.'", "'>=.'", "'<=.'", "'('", "')'", "'['", 
                     "']'", "'{'", "'}'", "':'", "';'", "','", "'.'" ]

    symbolicNames = [ "<INVALID>", "COMMENT", "ID", "DEC", "HEXA", "OCTAL", 
                      "FLOAT", "STRING", "BODY", "BREAK", "CONTINUE", "DO", 
                      "ELSE", "ELSEIF", "ENDBODY", "ENDIF", "ENDFOR", "ENDWHILE", 
                      "FOR", "FUNCTION", "IF", "PARAMETER", "RETURN", "THEN", 
                      "VAR", "WHILE", "TRUE", "FALSE", "ENDDO", "ADD", "ADDF", 
                      "SUB", "SUBF", "MUL", "MULF", "DIV", "DIVF", "MODUL", 
                      "NOT", "AND", "OR", "EQ", "ASS", "NEQ", "GREATER", 
                      "LESS", "GEQ", "LEQ", "NEQF", "LESSF", "GREATERF", 
                      "GEQF", "LEQF", "LP", "RP", "LS", "RS", "LB", "RB", 
                      "COLON", "SM", "CM", "DOT", "WS", "ILLEGAL_ESCAPE", 
                      "UNCLOSE_STRING", "UNTERMINATED_COMMENT", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_list_var_decl = 1
    RULE_list_func_decl = 2
    RULE_var_decl = 3
    RULE_listID = 4
    RULE_typeID = 5
    RULE_typearray = 6
    RULE_dimension = 7
    RULE_init_var = 8
    RULE_unit_array = 9
    RULE_array = 10
    RULE_func_decl = 11
    RULE_parameter = 12
    RULE_list_para = 13
    RULE_typePara = 14
    RULE_list_stm = 15
    RULE_stm = 16
    RULE_assign_stm = 17
    RULE_lhs = 18
    RULE_if_stm = 19
    RULE_list_elseif = 20
    RULE_else_ = 21
    RULE_for_stm = 22
    RULE_while_stm = 23
    RULE_dowhile_stm = 24
    RULE_break_stm = 25
    RULE_continue_stm = 26
    RULE_call_stm = 27
    RULE_para_call_stm = 28
    RULE_call_func = 29
    RULE_para_call_func = 30
    RULE_return_stm = 31
    RULE_index_operators = 32
    RULE_exp = 33
    RULE_exp1 = 34
    RULE_exp2 = 35
    RULE_exp3 = 36
    RULE_exp4 = 37
    RULE_exp5 = 38
    RULE_exp6 = 39
    RULE_exp7 = 40
    RULE_exp8 = 41
    RULE_operand = 42
    RULE_literal = 43
    RULE_relational = 44
    RULE_intlit = 45
    RULE_bool_literal = 46

    ruleNames =  [ "program", "list_var_decl", "list_func_decl", "var_decl", 
                   "listID", "typeID", "typearray", "dimension", "init_var", 
                   "unit_array", "array", "func_decl", "parameter", "list_para", 
                   "typePara", "list_stm", "stm", "assign_stm", "lhs", "if_stm", 
                   "list_elseif", "else_", "for_stm", "while_stm", "dowhile_stm", 
                   "break_stm", "continue_stm", "call_stm", "para_call_stm", 
                   "call_func", "para_call_func", "return_stm", "index_operators", 
                   "exp", "exp1", "exp2", "exp3", "exp4", "exp5", "exp6", 
                   "exp7", "exp8", "operand", "literal", "relational", "intlit", 
                   "bool_literal" ]

    EOF = Token.EOF
    COMMENT=1
    ID=2
    DEC=3
    HEXA=4
    OCTAL=5
    FLOAT=6
    STRING=7
    BODY=8
    BREAK=9
    CONTINUE=10
    DO=11
    ELSE=12
    ELSEIF=13
    ENDBODY=14
    ENDIF=15
    ENDFOR=16
    ENDWHILE=17
    FOR=18
    FUNCTION=19
    IF=20
    PARAMETER=21
    RETURN=22
    THEN=23
    VAR=24
    WHILE=25
    TRUE=26
    FALSE=27
    ENDDO=28
    ADD=29
    ADDF=30
    SUB=31
    SUBF=32
    MUL=33
    MULF=34
    DIV=35
    DIVF=36
    MODUL=37
    NOT=38
    AND=39
    OR=40
    EQ=41
    ASS=42
    NEQ=43
    GREATER=44
    LESS=45
    GEQ=46
    LEQ=47
    NEQF=48
    LESSF=49
    GREATERF=50
    GEQF=51
    LEQF=52
    LP=53
    RP=54
    LS=55
    RS=56
    LB=57
    RB=58
    COLON=59
    SM=60
    CM=61
    DOT=62
    WS=63
    ILLEGAL_ESCAPE=64
    UNCLOSE_STRING=65
    UNTERMINATED_COMMENT=66
    ERROR_CHAR=67

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def list_var_decl(self):
            return self.getTypedRuleContext(BKITParser.List_var_declContext,0)


        def list_func_decl(self):
            return self.getTypedRuleContext(BKITParser.List_func_declContext,0)


        def EOF(self):
            return self.getToken(BKITParser.EOF, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = BKITParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.list_var_decl()
            self.state = 95
            self.list_func_decl()
            self.state = 96
            self.match(BKITParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_var_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_decl(self):
            return self.getTypedRuleContext(BKITParser.Var_declContext,0)


        def list_var_decl(self):
            return self.getTypedRuleContext(BKITParser.List_var_declContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_list_var_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitList_var_decl" ):
                return visitor.visitList_var_decl(self)
            else:
                return visitor.visitChildren(self)




    def list_var_decl(self):

        localctx = BKITParser.List_var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_list_var_decl)
        try:
            self.state = 103
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 98
                self.var_decl()
                self.state = 99
                self.list_var_decl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 101
                self.var_decl()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_func_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def func_decl(self):
            return self.getTypedRuleContext(BKITParser.Func_declContext,0)


        def list_func_decl(self):
            return self.getTypedRuleContext(BKITParser.List_func_declContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_list_func_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitList_func_decl" ):
                return visitor.visitList_func_decl(self)
            else:
                return visitor.visitChildren(self)




    def list_func_decl(self):

        localctx = BKITParser.List_func_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_list_func_decl)
        try:
            self.state = 110
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 105
                self.func_decl()
                self.state = 106
                self.list_func_decl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 108
                self.func_decl()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(BKITParser.VAR, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def listID(self):
            return self.getTypedRuleContext(BKITParser.ListIDContext,0)


        def SM(self):
            return self.getToken(BKITParser.SM, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_var_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_decl" ):
                return visitor.visitVar_decl(self)
            else:
                return visitor.visitChildren(self)




    def var_decl(self):

        localctx = BKITParser.Var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_var_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(BKITParser.VAR)
            self.state = 113
            self.match(BKITParser.COLON)
            self.state = 114
            self.listID()
            self.state = 115
            self.match(BKITParser.SM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListIDContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeID(self):
            return self.getTypedRuleContext(BKITParser.TypeIDContext,0)


        def CM(self):
            return self.getToken(BKITParser.CM, 0)

        def listID(self):
            return self.getTypedRuleContext(BKITParser.ListIDContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_listID

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListID" ):
                return visitor.visitListID(self)
            else:
                return visitor.visitChildren(self)




    def listID(self):

        localctx = BKITParser.ListIDContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_listID)
        try:
            self.state = 122
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 117
                self.typeID()
                self.state = 118
                self.match(BKITParser.CM)
                self.state = 119
                self.listID()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 121
                self.typeID()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeIDContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def typearray(self):
            return self.getTypedRuleContext(BKITParser.TypearrayContext,0)


        def init_var(self):
            return self.getTypedRuleContext(BKITParser.Init_varContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_typeID

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeID" ):
                return visitor.visitTypeID(self)
            else:
                return visitor.visitChildren(self)




    def typeID(self):

        localctx = BKITParser.TypeIDContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_typeID)
        try:
            self.state = 127
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 124
                self.match(BKITParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 125
                self.typearray()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 126
                self.init_var()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypearrayContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def dimension(self):
            return self.getTypedRuleContext(BKITParser.DimensionContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_typearray

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypearray" ):
                return visitor.visitTypearray(self)
            else:
                return visitor.visitChildren(self)




    def typearray(self):

        localctx = BKITParser.TypearrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_typearray)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(BKITParser.ID)
            self.state = 130
            self.dimension()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DimensionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LS(self):
            return self.getToken(BKITParser.LS, 0)

        def intlit(self):
            return self.getTypedRuleContext(BKITParser.IntlitContext,0)


        def RS(self):
            return self.getToken(BKITParser.RS, 0)

        def dimension(self):
            return self.getTypedRuleContext(BKITParser.DimensionContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_dimension

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDimension" ):
                return visitor.visitDimension(self)
            else:
                return visitor.visitChildren(self)




    def dimension(self):

        localctx = BKITParser.DimensionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_dimension)
        try:
            self.state = 141
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 132
                self.match(BKITParser.LS)
                self.state = 133
                self.intlit()
                self.state = 134
                self.match(BKITParser.RS)
                self.state = 135
                self.dimension()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 137
                self.match(BKITParser.LS)
                self.state = 138
                self.intlit()
                self.state = 139
                self.match(BKITParser.RS)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Init_varContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def ASS(self):
            return self.getToken(BKITParser.ASS, 0)

        def literal(self):
            return self.getTypedRuleContext(BKITParser.LiteralContext,0)


        def dimension(self):
            return self.getTypedRuleContext(BKITParser.DimensionContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_init_var

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInit_var" ):
                return visitor.visitInit_var(self)
            else:
                return visitor.visitChildren(self)




    def init_var(self):

        localctx = BKITParser.Init_varContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_init_var)
        try:
            self.state = 151
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 143
                self.match(BKITParser.ID)
                self.state = 144
                self.match(BKITParser.ASS)
                self.state = 145
                self.literal()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 146
                self.match(BKITParser.ID)
                self.state = 147
                self.dimension()
                self.state = 148
                self.match(BKITParser.ASS)
                self.state = 149
                self.literal()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Unit_arrayContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def literal(self):
            return self.getTypedRuleContext(BKITParser.LiteralContext,0)


        def CM(self):
            return self.getToken(BKITParser.CM, 0)

        def unit_array(self):
            return self.getTypedRuleContext(BKITParser.Unit_arrayContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_unit_array

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnit_array" ):
                return visitor.visitUnit_array(self)
            else:
                return visitor.visitChildren(self)




    def unit_array(self):

        localctx = BKITParser.Unit_arrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_unit_array)
        try:
            self.state = 158
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 153
                self.literal()
                self.state = 154
                self.match(BKITParser.CM)
                self.state = 155
                self.unit_array()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 157
                self.literal()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(BKITParser.LB, 0)

        def unit_array(self):
            return self.getTypedRuleContext(BKITParser.Unit_arrayContext,0)


        def RB(self):
            return self.getToken(BKITParser.RB, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_array

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray" ):
                return visitor.visitArray(self)
            else:
                return visitor.visitChildren(self)




    def array(self):

        localctx = BKITParser.ArrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_array)
        try:
            self.state = 166
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 160
                self.match(BKITParser.LB)
                self.state = 161
                self.unit_array()
                self.state = 162
                self.match(BKITParser.RB)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 164
                self.match(BKITParser.LB)
                self.state = 165
                self.match(BKITParser.RB)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(BKITParser.FUNCTION, 0)

        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COLON)
            else:
                return self.getToken(BKITParser.COLON, i)

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def parameter(self):
            return self.getTypedRuleContext(BKITParser.ParameterContext,0)


        def BODY(self):
            return self.getToken(BKITParser.BODY, 0)

        def list_var_decl(self):
            return self.getTypedRuleContext(BKITParser.List_var_declContext,0)


        def list_stm(self):
            return self.getTypedRuleContext(BKITParser.List_stmContext,0)


        def ENDBODY(self):
            return self.getToken(BKITParser.ENDBODY, 0)

        def DOT(self):
            return self.getToken(BKITParser.DOT, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_func_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_decl" ):
                return visitor.visitFunc_decl(self)
            else:
                return visitor.visitChildren(self)




    def func_decl(self):

        localctx = BKITParser.Func_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_func_decl)
        try:
            self.state = 189
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 168
                self.match(BKITParser.FUNCTION)
                self.state = 169
                self.match(BKITParser.COLON)
                self.state = 170
                self.match(BKITParser.ID)
                self.state = 171
                self.parameter()
                self.state = 172
                self.match(BKITParser.BODY)
                self.state = 173
                self.match(BKITParser.COLON)
                self.state = 174
                self.list_var_decl()
                self.state = 175
                self.list_stm()
                self.state = 176
                self.match(BKITParser.ENDBODY)
                self.state = 177
                self.match(BKITParser.DOT)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 179
                self.match(BKITParser.FUNCTION)
                self.state = 180
                self.match(BKITParser.COLON)
                self.state = 181
                self.match(BKITParser.ID)
                self.state = 182
                self.match(BKITParser.BODY)
                self.state = 183
                self.match(BKITParser.COLON)
                self.state = 184
                self.list_var_decl()
                self.state = 185
                self.list_stm()
                self.state = 186
                self.match(BKITParser.ENDBODY)
                self.state = 187
                self.match(BKITParser.DOT)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PARAMETER(self):
            return self.getToken(BKITParser.PARAMETER, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def list_para(self):
            return self.getTypedRuleContext(BKITParser.List_paraContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_parameter

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter" ):
                return visitor.visitParameter(self)
            else:
                return visitor.visitChildren(self)




    def parameter(self):

        localctx = BKITParser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_parameter)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 191
            self.match(BKITParser.PARAMETER)
            self.state = 192
            self.match(BKITParser.COLON)
            self.state = 193
            self.list_para()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_paraContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typePara(self):
            return self.getTypedRuleContext(BKITParser.TypeParaContext,0)


        def CM(self):
            return self.getToken(BKITParser.CM, 0)

        def list_para(self):
            return self.getTypedRuleContext(BKITParser.List_paraContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_list_para

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitList_para" ):
                return visitor.visitList_para(self)
            else:
                return visitor.visitChildren(self)




    def list_para(self):

        localctx = BKITParser.List_paraContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_list_para)
        try:
            self.state = 200
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 195
                self.typePara()
                self.state = 196
                self.match(BKITParser.CM)
                self.state = 197
                self.list_para()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 199
                self.typePara()
                pass

